feat: implement HomePage with quiz selection and icon components, adjust UI for responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@
 
     body,
     #root {
-        @apply font-rubik min-h-screen;
+        @apply font-rubik min-h-screen text-greyNavy dark:text-white;
     }
 }
